[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/icons/chat.svg" type="Texture" id=1]
[ext_resource path="res://Chat.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/icons/chat_active.svg" type="Texture" id=3]
[ext_resource path="res://assets/characters/NPC.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/timer-outline.svg" type="Texture" id=12]
[ext_resource path="res://assets/icons/settings.svg" type="Texture" id=13]
[ext_resource path="res://default_theme.tres" type="Theme" id=14]
[ext_resource path="res://assets/icons/timer-outline-hover.svg" type="Texture" id=15]
[ext_resource path="res://UI.gd" type="Script" id=19]
[ext_resource path="res://TransientMessage.gd" type="Script" id=21]
[ext_resource path="res://Character.tscn" type="PackedScene" id=22]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/icons/robot-sleepy.svg" type="Texture" id=29]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Times New Roman.ttf"

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 22
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.690196, 0.690196, 0.690196, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.984314, 0.431373, 0.129412, 1 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Times New Roman.ttf"

[sub_resource type="DynamicFont" id=15]
size = 28
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Times New Roman.ttf"

[sub_resource type="DynamicFont" id=8]
size = 39
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://Times New Roman.ttf"

[sub_resource type="DynamicFont" id=13]
size = 28
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://FredokaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = SubResource( 11 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 4.0
margin_right = 2.0
margin_bottom = 4.0
mouse_filter = 2
script = ExtResource( 19 )

[node name="Bottom" type="HBoxContainer" parent="."]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -70.0
margin_right = -10.0
rect_min_size = Vector2( 0, 250 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Bottom"]
margin_right = 500.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 0 )
color = Color( 0.968627, 0.623529, 0.345098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 500, 250 )

[node name="Control" type="Control" parent="Bottom/ColorRect/VBoxContainer"]
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="TextureRect" type="TextureRect" parent="Bottom/ColorRect/VBoxContainer/Control"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
texture = ExtResource( 29 )

[node name="CenterContainer" type="CenterContainer" parent="Bottom/ColorRect/VBoxContainer"]
margin_top = 79.0
margin_right = 500.0
margin_bottom = 239.0
rect_min_size = Vector2( 0, 160 )

[node name="ColorRect" type="ColorRect" parent="Bottom/ColorRect/VBoxContainer/CenterContainer"]
margin_left = 40.0
margin_right = 460.0
margin_bottom = 160.0
rect_min_size = Vector2( 420, 160 )

[node name="CenterContainer" type="CenterContainer" parent="Bottom/ColorRect/VBoxContainer/CenterContainer/ColorRect"]
margin_right = 420.0
margin_bottom = 160.0
rect_min_size = Vector2( 420, 160 )

[node name="VBoxContainer" type="VBoxContainer" parent="Bottom/ColorRect/VBoxContainer/CenterContainer/ColorRect/CenterContainer"]
margin_right = 420.0
margin_bottom = 160.0
rect_min_size = Vector2( 420, 160 )
alignment = 1

[node name="Chat" type="Label" parent="Bottom/ColorRect/VBoxContainer/CenterContainer/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 420.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 80 )
custom_colors/font_color = Color( 0.172549, 0.172549, 0.172549, 1 )
custom_colors/font_color_shadow = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="Top" type="HBoxContainer" parent="."]
anchor_right = 0.859375
anchor_bottom = 0.15
margin_left = 10.0
margin_top = 10.0
margin_right = 48.0
custom_constants/separation = 250
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="Top"]
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Top"]
margin_left = 500.0
margin_right = 750.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 0 )

[node name="Portrait" type="TextureRect" parent="Top/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 50 )
theme = ExtResource( 14 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="Top/HBoxContainer2/Portrait"]
show_behind_parent = true
anchor_right = 0.833
anchor_bottom = 0.857
margin_left = 7.0
margin_top = -3.0
margin_right = 9.7
margin_bottom = 14.44
color = Color( 0, 0, 0, 0.670588 )

[node name="NameBox" type="VBoxContainer" parent="Top/HBoxContainer2"]
margin_left = 104.0
margin_right = 224.0
margin_bottom = 170.0

[node name="Name" type="Label" parent="Top/HBoxContainer2/NameBox"]
margin_right = 120.0
margin_bottom = 53.0
rect_min_size = Vector2( 120, 0 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Thank you so much !"
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Top"]
margin_left = 1000.0
margin_right = 2100.0
margin_bottom = 170.0
custom_constants/separation = 0

[node name="Control" type="Control" parent="Top/VBoxContainer"]
margin_right = 1100.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="ProgressBar" type="ProgressBar" parent="Top/VBoxContainer"]
margin_top = 60.0
margin_right = 1100.0
margin_bottom = 110.0
rect_min_size = Vector2( 1100, 50 )
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 10.0
percent_visible = false
__meta__ = {
"_editor_description_": ""
}

[node name="RightPanel" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
mouse_filter = 2

[node name="IconSet" type="HBoxContainer" parent="RightPanel"]
anchor_right = 1.0
margin_bottom = 60.0
mouse_filter = 2

[node name="spacer" type="Control" parent="RightPanel/IconSet"]
margin_right = 176.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="away" type="TextureButton" parent="RightPanel/IconSet"]
visible = false
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 15 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": ""
}

[node name="chat" type="TextureButton" parent="RightPanel/IconSet"]
visible = false
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": ""
}

[node name="settings" type="TextureButton" parent="RightPanel/IconSet"]
margin_left = 180.0
margin_right = 240.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": ""
}

[node name="Chat" parent="RightPanel" instance=ExtResource( 2 )]
visible = false
anchor_left = 0.0
anchor_top = 1.0
margin_left = 0.0
margin_top = -300.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TransientMessage" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.72549 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.5
margin_top = -19.0
margin_right = 259.5
margin_bottom = 19.0
theme = ExtResource( 14 )
custom_fonts/font = SubResource( 15 )
text = "press left-click to move the camera"
align = 1
script = ExtResource( 21 )

[node name="Tween" type="Tween" parent="TransientMessage"]

[node name="Settings" parent="." instance=ExtResource( 23 )]
pause_mode = 2
visible = false

[node name="CharacterViewport" type="Viewport" parent="."]
size = Vector2( 256, 256 )
own_world = true
transparent_bg = true
handle_input_locally = false
msaa = 1
hdr = false
render_target_v_flip = true
gui_disable_input = true

[node name="Character" parent="CharacterViewport" instance=ExtResource( 22 )]

[node name="Advise" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -597.0
margin_top = 11.0
margin_right = 603.0
margin_bottom = 55.0
rect_min_size = Vector2( 1200, 40 )
custom_colors/font_color = Color( 0.101961, 0.372549, 0.705882, 1 )
custom_fonts/font = SubResource( 8 )
text = "It seems that you can't put it out by yourself, try to call for help from robot"
align = 1
valign = 1

[node name="Label" type="Label" parent="."]
margin_left = 950.0
margin_top = 70.0
margin_right = 1183.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Fires remaining"
align = 1
valign = 1

[node name="Start" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -681.0
margin_top = -29.5
margin_right = 681.0
margin_bottom = 29.5
rect_min_size = Vector2( 1200, 40 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "You're now at the gate of the building, let's start the game"
align = 1
valign = 1
